# api/serveur.js
@@ -1,6 +1,7 @@
 const express = require('express');
 const cors = require('cors');
 const bodyParser = require('body-parser');
+const os = require('os');
 
 const swaggerUi = require('swagger-ui-express');
 const YAML = require('yamljs');
@@ -9,6 +10,7 @@ const jobs = require('./routes/jobs');
 const projects = require('./routes/projects');
 const sessions = require('./routes/sessions');
 const nodes = require('./routes/nodes');
+const dependencies = require('./routes/dependencies');
 
 const PORT = 8080;
 
@@ -28,6 +30,8 @@ const options = {
 };
 
 const swaggerDocument = YAML.load('./doc/swagger.yml');
+const hostname = os.hostname();
+swaggerDocument.servers[0].url = `http://${hostname}:${PORT}/api`;
 
 app.use('/api/doc', swaggerUi.serve, swaggerUi.setup(swaggerDocument, options));
 
@@ -35,6 +39,7 @@ app.use('/api', jobs);
 app.use('/api', projects);
 app.use('/api', sessions);
 app.use('/api', nodes);
+app.use('/api', dependencies);
 
 module.exports = app.listen(PORT, () => {
   debug.log(`URL de l'api : http://localhost:${PORT}/api \nURL de la documentation swagger : http://localhost:${PORT}/api/doc`);
